[package]
name = "cargo-server"
version = "0.2.1"
description = "Teach you to use cargo-server"
license = "MPL-2.0"
authors = ["Jiaxin Ying <jy362.duke.edu>"]
edition = "2021"
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.64.0"
include = ["src", "README.md"]

[dependencies]
axum = "0.5.16"
tokio = { version = "1.21.2", features = ["full"] }
tower-http = { version = "0.3.4", features = ["fs", "cors"] }
clap = { version = "4.0.1", features = ["derive"] }
open = "3.0.3"
http = "0.2.8"
